GNOME Bugzilla – Bug 769295
Broken compilation on RPi with latest rawaudioparse changes
Last modified: 2016-07-29 08:07:52 UTC
The following is thrown when trying to compile the latest master on the RPi : gstrawaudioparse.c:970:7: error: format '%lx' expects argument of type 'long unsigned int', but argument 8 has type 'guint64' [-Werror=format=] GST_DEBUG_OBJECT (raw_audio_parse, ^ gstrawaudioparse.c:977:7: error: format '%lx' expects argument of type 'long unsigned int', but argument 8 has type 'guint64' [-Werror=format=] GST_ERROR_OBJECT (raw_audio_parse, Seems like gcc is too strict in this case..
It's correct: long unsigned int is 32 bits on the RPi, while guint64 is 64 bits. commit 1990d4337be47a4fcfe5eea01f7f1495ff0d4e1d Author: Sebastian Dröge <sebastian@centricular.com> Date: Fri Jul 29 10:49:26 2016 +0300 rawaudioparse: Use G_GINT64_MODIFIER for portability https://bugzilla.gnome.org/show_bug.cgi?id=769295
True, thanks for the quick response.