rawaudioparse: Use G_GINT64_MODIFIER for portability

https://bugzilla.gnome.org/show_bug.cgi?id=769295